Update README for the new `.bfg-card` block

--- a/src/demo/2.html
+++ b/src/demo/2.html
@@ -21,6 +21,7 @@
       <h1>One line</h1>
       <p>By default, <code>.bfg__box</code> elements are displayed onto one line and can not leave outside the <code>.bfg</code> block.</p>
       <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
+      <p>The total size available for each line is 12.</p>
 
     </div>
   </div>
