--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -60,9 +60,7 @@
 
   <a href="#"
     id="switch-theme"
-    class="demo-toolbox__action"
-    data-text="Light"
-    data-text-active="Dark">Light</a>
+    class="demo-toolbox__action demo-toolbox__action--theme"></a>
 
   <script>
     Demo.handleAction(document.querySelector('#switch-theme'), (isActive) => {
