--- a/src/demo/1.html
+++ b/src/demo/1.html
@@ -18,7 +18,7 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Basics</h1>
+      <h1>Basic markup</h1>
       <p>At core the grid system consists of one <code>.bfg</code> block and one or more <code>.bfg__box</code> elements.</p>
       <p>It is required to define the direction the <code>.bfg__box</code> elements are placed in the <code>.bfg</code> block, using <code>.bfg--row</code> or <code>.bfg--col</code> modifiers.</p>
 
