--- a/src/demo/9.html
+++ b/src/demo/9.html
@@ -18,32 +18,59 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Remaining space distribution</h1>
-      <p>
-        When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
-        <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
-        <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.
-      </p>
+      <h1>Mixing chained and nested grids</h1>
+      <p>Works too!</p>
+      <p>Notice that if you use <code>.bfg--gap</code> modifier, you'll need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of any nested grid.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--row bfg--main-between">
-        <div class="bfg__box bfg__box--2"></div>
-        <div class="bfg__box bfg__box--fit" style="background:#FFEBEE;">
-          <i>Fixed box</i>
+      <div class="bfg bfg--col bfg--gap">
+        <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- chained -->
+
+          <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
+
+            <div class="bfg__box bfg__box--6"></div>
+            <div class="bfg__box bfg__box--6"></div>
+
+          </div>
+          <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+            <div class="bfg bfg--col"><!-- nested -->
+
+              <div class="bfg__box bfg__box--6"></div>
+              <div class="bfg__box bfg__box--6"></div>
+
+            </div>
+          </div>
+
         </div>
-        <div class="bfg__box bfg__box--fit" style="background:#FFEBEE;">
-          <i>Fixed box</i>
+        <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+
+          <div class="bfg bfg--row"><!-- nested -->
+            <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
+
+              <div class="bfg__box bfg__box--6"></div>
+              <div class="bfg__box bfg__box--6"></div>
+
+            </div>
+            <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+              <div class="bfg bfg--col"><!-- nested -->
+
+                <div class="bfg__box bfg__box--6"></div>
+                <div class="bfg__box bfg__box--6"></div>
+
+              </div>
+            </div>
+          </div>
+
         </div>
-        <div class="bfg__box bfg__box--4"></div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
