Fix `handleAction` and improve the demos descriptions

--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -18,7 +18,7 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Content, header and actions</h1>
+      <h1>Grid card</h1>
       <p>Add an header using <code>.bfg-card__header</code> element along with <code>.bfg-card__content</code> element.</p>
       <p>Add one or more actions using <code>.bfg-card__action</code> element along with <code>.bfg-card__header</code> element.</p>
 
