--- a/src/demo/4.html
+++ b/src/demo/4.html
@@ -22,7 +22,8 @@
       <p>If you use the selector <code>.bfg.bfg--row.bfg--wrap</code> then <code>.bfg__box</code> elements are placed in the row direction and wrapped onto multiple lines when needed.</p>
       <p>But in this case the total height of all <code>.bfg__box</code> elements might be bigger than the <code>.bfg</code> block height itself!</p>
       <p>If you know that there's exactly 2 lines of <code>.bfg__box</code> elements, you can constrain them to fit into the <code>.bfg</code> block, by using <code>.bfg--lines-2</code> modifier.</p>
-      <p>In this case, all the rows will have the same height.</p>
+      <p>With this technique, all the rows will have the same height.</p>
+      <p>The same pattern applies to the selector <code>.bfg.bfg--col.bfg--wrap</code>.</p>
 
     </div>
   </div>
