--- a/src/demo/6.html
+++ b/src/demo/6.html
@@ -20,6 +20,7 @@
 
       <h1>Nested grid</h1>
       <p>To nest grids, include a <code>.bfg</code> block inside a <code>.bfg__box</code> element.</p>
+      <p>In this demo, we use a main column grid and nested row grids. With this technique, each row can have a different height.</p>
 
     </div>
   </div>
