--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../styles/demo.scss">
-  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="14.scss">
 
   <script src="../script.ts"></script>
 </head>
@@ -18,8 +18,9 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Dashboard</h1>
-      <p>Bem flex grid perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</p>
+      <h1>Grid card</h1>
+      <p>Add an header using <code>.bfg-card__header</code> element along with <code>.bfg-card__content</code> element.</p>
+      <p>Add one or more actions using <code>.bfg-card__action</code> element along with <code>.bfg-card__header</code> element.</p>
 
     </div>
   </div>
@@ -27,50 +28,45 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap bfg-card bfg-card--primary">
-        <div class="bfg__box bfg__box--6">
-          <!-- content with header -->
-          <header class="bfg-card__header">Header</header>
-          <div class="bfg-card__content">
-            <div class="demo-chart"></div>
+        <div class="bfg__box bfg__box--3">
+
+          <!-- nested card with content and header -->
+          <div class="bfg-card bfg-card--error">
+            <header class="bfg-card__header">Header</header>
+            <div class="bfg-card__content"></div>
           </div>
+
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3">
+          <div class="bfg__box bfg__box--3 bfg-card">
             <!-- content with header and actions -->
             <div class="bfg-card__action"><a href="#action-2">Action 2</a></div>
             <div class="bfg-card__action"><a href="#action-1">Action 1</a></div>
             <header class="bfg-card__header">Very very very long Header</header>
-            <div class="bfg-card__content">
-              <div class="demo-chart"></div>
-            </div>
+            <div class="bfg-card__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--6">
-            <div class="bfg-card__content">
-              <div class="demo-chart"></div>
-            </div>
+          <div class="bfg__box bfg__box--6 bfg-card">
+            <!-- content without header -->
+            <div class="bfg-card__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--3">
+          <div class="bfg__box bfg__box--3 bfg-card bfg-card--info">
             <header class="bfg-card__header">Header</header>
-            <div class="bfg-card__content">
-              <div class="demo-chart"></div>
-            </div>
+            <div class="bfg-card__content"></div>
           </div>
+        </div>
+
+        <div class="bfg__box bfg__box--3 bfg-card bfg-card--warning">
+          <header class="bfg-card__header">Header</header>
+          <div class="bfg-card__content"></div>
         </div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction', 'gridGap']);</script>
-
-  <script>
-    const ctx = document.querySelectorAll('.demo-chart');
-    for (let i = 0; i < ctx.length; i++) {
-      Demo.chart(ctx[i]);
-    }
-  </script>
+  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.enableActions();</script>
 </body>
 </html>
