--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -35,6 +35,7 @@
       <h1>Standalone card</h1>
       <p>The card's content must be placed inside a <code>.bfg-card__content</code> element.</p>
       <p>Then you can add an header to the card using the optional <code>.bfg-card__header</code> element and one or more actions to the header using the optional <code>.bfg-card__action</code> element.</p>
+      <p>By default, the card's elements do not have any look and feel. Use the <code>.bfg-card--*</code> modifiers to adapt the appearance of each block to your needs.</p>
 
     </div>
   </div>
