--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -19,48 +19,38 @@
     <div class="demo-layout__readme">
 
       <h1>Grid card</h1>
-      <p>Add an header using <code>.bfg-card__header</code> element along with <code>.bfg-card__content</code> element.</p>
-      <p>Add one or more actions using <code>.bfg-card__action</code> element along with <code>.bfg-card__header</code> element.</p>
+      <p>Using the selector <code>.bfg.bfg-card</code> simply tells that the <code>.bfg</code> block contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> block.</p>
+      <p>This allows you to define a default look and feel for all cards and lets you customize some of them, using the different <code>.bfg-card--*</code> modifiers.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output demo-layout__output--gray">
     <div class="demo-layout__playground">
 
+      <!-- global card definition -->
       <div class="bfg bfg--col bfg--gap bfg-card bfg-card--primary">
-        <div class="bfg__box bfg__box--3">
-
-          <!-- nested card with content and header -->
-          <div class="bfg-card bfg-card--error">
-            <header class="bfg-card__header">Header</header>
-            <div class="bfg-card__content"></div>
-          </div>
-
+        <div class="bfg__box">
+          <div class="bfg-card__header">Header</div>
+          <div class="bfg-card__content"><!-- use global "primary" theme --></div>
         </div>
 
-        <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg-card">
-            <!-- content with header and actions -->
-            <div class="bfg-card__action"><a href="#action-2">Action 2</a></div>
-            <div class="bfg-card__action"><a href="#action-1">Action 1</a></div>
-            <header class="bfg-card__header">Very very very long Header</header>
-            <div class="bfg-card__content"></div>
-          </div>
-
-          <div class="bfg__box bfg__box--6 bfg-card">
-            <!-- content without header -->
-            <div class="bfg-card__content"></div>
-          </div>
-
-          <div class="bfg__box bfg__box--3 bfg-card bfg-card--info">
-            <header class="bfg-card__header">Header</header>
-            <div class="bfg-card__content"></div>
-          </div>
+        <div class="bfg__box">
+          <div class="bfg-card__header">Header</div>
+          <div class="bfg-card__content"><!-- use global "primary" theme --></div>
         </div>
 
-        <div class="bfg__box bfg__box--3 bfg-card bfg-card--warning">
-          <header class="bfg-card__header">Header</header>
-          <div class="bfg-card__content"></div>
+        <!-- chained card definition (at box level) -->
+        <div class="bfg__box bfg-card bfg-card--info">
+          <div class="bfg-card__header">Header</div>
+          <div class="bfg-card__content"><!-- use local "info" theme --></div>
+        </div>
+
+        <div class="bfg__box">
+          <!-- nested card definition (inner box) -->
+          <div class="bfg-card bfg-card--info">
+            <div class="bfg-card__header">Header</div>
+            <div class="bfg-card__content"><!-- use local "info" theme --></div>
+          </div>
         </div>
       </div>
 
