--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -19,8 +19,7 @@
     <div class="demo-layout__readme">
 
       <h1>Dashboard</h1>
-      <p>Bem flex grid perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</p>
-
+      <p>Bem flex grid perfectly fits to the window size in both width and height and lets you design fixed dashboard.</p>
     </div>
   </div>
   <pre class="demo-layout__output demo-layout__output--gray">
