--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="bfg__box">
-          <!-- nested card definition (inner box) -->
+          <!-- nested card definition (as box child) -->
           <div class="bfg-card bfg-card--info">
             <div class="bfg-card__header">Header</div>
             <div class="bfg-card__content"><!-- use local "info" theme --></div>
