--- a/src/index.html
+++ b/src/index.html
@@ -179,7 +179,7 @@
   &lt;/div&gt;
 
   &lt;div class=&quot;bfg__box&quot;&gt;
-    &lt;!-- nested card definition (inner box) --&gt;
+    &lt;!-- nested card definition (as box child) --&gt;
     &lt;div class=&quot;bfg-card bfg-card--secondary&quot;&gt;
       &lt;div class=&quot;bfg-card__content&quot;&gt;&lt;!-- use local &quot;secondary&quot; theme --&gt;&lt;/div&gt;
     &lt;/div&gt;
