--- a/src/index.html
+++ b/src/index.html
@@ -268,7 +268,7 @@
 <blockquote>
 <p>The default value of the gap is <code>1rem</code> (see below the Sass variable <code>$bfg-gap</code>).</p>
 </blockquote>
-<p>Use <code>.bfg--nogap</code> modifier to remove the gap on an inner grids.
+<p>Use <code>.bfg--nogap</code> modifier to remove the gap on an inner grid.
 Here's an example with <em>chained</em> grid.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;
   &lt;div class=&quot;bfg__box&quot;&gt;&lt;!-- with gap --&gt;&lt;/div&gt;
