Add link to NPM

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 <p>To learn more about the features, check out the <a href="https://avine.github.io/bem-flex-grid/demo.html">demos</a>.</p>
 </blockquote>
 <h2>Installation and usage</h2>
-<p>Install the package from NPM (or Yarn) and insert the link tag into your web pages or use Sass import for more customization.</p>
+<p>Install the package from <a href="https://www.npmjs.com/package/bem-flex-grid">NPM</a> (or Yarn) and insert the link tag into your web pages or use Sass import for more customization.</p>
 <p><em>NPM:</em></p>
 <pre><code class="language-bash">npm i bem-flex-grid
 </code></pre>
