Fix `.bfg-card` line-height

--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -19,7 +19,8 @@
     <div class="demo-layout__readme">
 
       <h1>Grid card</h1>
-      <p>Using the selector <code>.bfg.bfg-card</code> simply tells that the <code>.bfg</code> block contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> block.</p>
+      <p>The <code>.bfg-card</code> block can be added at different levels of the grid.</p>
+      <p>Using the selector <code>.bfg.bfg-card</code> tells that the <code>.bfg</code> block contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> block.</p>
       <p>This allows you to define a default look and feel for all cards and lets you customize some of them, using the different <code>.bfg-card--*</code> modifiers.</p>
 
     </div>
